--- a/src/pages/beer/beer-list/beer-list.css
+++ b/src/pages/beer/beer-list/beer-list.css
@@ -1,22 +1,3 @@
-/*container*/
-.container {
-    width: 100%;
-    flex-wrap: wrap;
-    display: flex;
-}
-
-.beer-item {
-    padding: 0;
-    margin: 0;
-}
-
-.beer-item li {
-    margin-bottom: 1em;
-    list-style-type: none
-}
-
-.beer-item li img {
-    width: 70px;
-    height: 150px;
-    margin-right: 25px;
-}
+.card-image img {
+    height: 100px;
+  }
